Fixed GeoServer setup (#103)